Lagt til hover effect samt fikset fitRows layout bug på resultat siden

--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -158,14 +158,23 @@ input[type=checkbox]:checked + label:before {
     margin-top: 25px;
 }
 .single_item {
-    margin-left: 10px;
-    float: left;
-    width: 277px;
-    margin-bottom: 10px;
+    display:inline-block;
+    position: relative;
 }
-.single_item img{
-    max-width: 100%;
-    height: auto;
+.single_item:after {
+    content:'';
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    opacity: 0;
 }
 
+.single_item:hover:after {
+    opacity: 0.5;
+    background: rgba(0, 200, 255, 0.75);
+}
 /* -- ISOTOPE AREA END -- */
